# mayusculasminusculas

./: README.md  install.sh  instrucciones.sh  meson.build  uninstall.sh
data/: MayusApp.appdata.xml  MayusApp.desktop  gresource.xml  meson.build
data/ui/: texview.ui  window.ui
src/: main.c  meson.build
